--- a/Reward.html
+++ b/Reward.html
@@ -54,7 +54,7 @@
                         <img src="./assets/img/cashAppIcon.png" alt="">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter Your Cash App Tag">
                     </div>
                 </div>
                 <div class="form-check">
@@ -66,7 +66,7 @@
                         <img src="./assets/img/paypalIcon.png" alt="">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter your Email">
                     </div>
                 </div>
                 <div class="form-check">
@@ -78,7 +78,7 @@
                         <img src="./assets/img/zelleIcon.png" alt="">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter your Email">
                     </div>
                 </div>
                 <div class="form-check">
@@ -90,7 +90,7 @@
                         <img src="./assets/img/bitcoinIcon.png" alt="">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter Bitcoin Address">
                     </div>
                 </div>
                 <div class="form-check">
@@ -101,7 +101,7 @@
                     <div class="appIcon">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter address">
                     </div>
                 </div>
                 <div class="form-check">
@@ -112,7 +112,7 @@
                     <div class="appIcon">
                     </div>
                     <div class="inputRow">
-                        <input type="email" class="form-control" placeholder="Please enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter your Email">
                     </div>
                 </div>
                 <a class="customBtn connectPayment w-100">Continue to connect</a>
