--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <header class="navWrap">
         <div class="container">
             <nav class="navbar justify-content-between">
-                <a class="navbar-brand" href="#"><img src="./assets/img/mainLogo.png" alt="">Rewards</span></a>
-                <a href="Reward.html" class="customBtn">Get Started</a>
+                <a class="navbar-brand" href="#"><img src="./assets/img/mainLogo.jpeg" alt="">Rewards</span></a>
+                <a href="#heroSec" class="customBtn">Get Started</a>
             </nav>
         </div>
     </header>
     <!-- navbar start end -->
 
     <!-- hero section start  -->
-    <section class="heroWrap">
+    <section class="heroWrap" id="heroSec">
         <div class="container">
             <div class="heroInner">
                 <div class="heroContent">
@@ -45,6 +45,9 @@
                             Invalid code. Please try again.
                         </div>
                     </form>
+                    <div class="heroLogo">
+                        <img src="./assets/img/heroLogo.svg" alt="">
+                    </div>
                 </div>
                 <div class="heroImg">
                     <img src="./assets/img/heroImg.png" alt="">
